<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:weightSum="1">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:id="@+id/scrollView3"
            android:measureAllChildren="false">
        <meliarion.ts3.ts3remote.TSServerView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:id="@+id/serverView" />
            </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="47dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_server_chat"
            android:id="@+id/showServerChat" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/button_channel_chat"
            android:id="@+id/showChannelChat" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Test"
            android:id="@+id/button2"
            android:onClick="TestButton" />
    </LinearLayout>

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_chat"
            android:id="@+id/ChatTextView" />
    </ScrollView>

    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

        <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/commands"
                android:layout_weight="1.61"/>

        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:id="@+id/button"
                android:onClick="SendMessage"/>

    </LinearLayout>
    <!--
        <TabHost
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:id="@+id/chatTabHost">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TabWidget
                    android:id="@android:id/tabs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"></TabWidget>

                <FrameLayout
                    android:id="@android:id/tabcontent"
                    android:layout_width="match_parent"
                    android:layout_height="176dp">

                    <LinearLayout
                        android:id="@+id/tab1"
                        android:layout_width="match_parent"
                        android:layout_height="253dp"
                        android:orientation="vertical">

                        <ScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ChannelChatContent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_chat"
                                android:id="@+id/ChannelChat" />
                        </ScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/ServerChatContent" >

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/default_chat"
                                android:id="@+id/ServerChat" />
                        </ScrollView>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/tab3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ScrollView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/scrollView6" />
                    </LinearLayout>
                </FrameLayout>
            </LinearLayout>
        </TabHost>
    -->
    <meliarion.ts3.ts3remote.PersistantFragmentTabHost
        android:id="@+id/fragChatTabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom" />

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />
        </LinearLayout>

    </meliarion.ts3.ts3remote.PersistantFragmentTabHost>
</LinearLayout>